--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corporate-library-management-system",
+  "name": "e-library",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,32 +8,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@hookform/resolvers": "^2.8.8",
-    "@next-auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^3.12.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "axios": "^0.26.0",
-    "babel-plugin-superjson-next": "^0.4.2",
-    "date-fns": "^2.28.0",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.7",
+    "@prisma/client": "^4.2.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
+    "babel-plugin-superjson-next": "^0.4.4",
+    "body-parser": "^1.20.0",
+    "date-fns": "^2.29.2",
     "file-loader": "^6.2.0",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "ldapjs": "^2.3.2",
-    "multer": "^1.4.4",
+    "ldapjs": "^2.3.3",
+    "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1",
-    "next": "12.0.8",
-    "next-auth": "^4.2.1",
-    "next-connect": "^0.11.0",
-    "nodemailer": "^6.7.2",
+    "next": "^12.2.5",
+    "next-auth": "^4.10.3",
+    "next-connect": "^0.13.0",
+    "nodemailer": "^6.7.8",
     "pdf2pic": "^2.1.4",
     "pdfjs": "^2.4.7",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-csv": "^2.2.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.27.1",
-    "react-paginate": "^8.1.2",
+    "react-paginate": "^8.1.3",
     "react-pdf": "^5.7.0",
     "sharp": "^0.30.0",
     "superjson": "^1.8.0",
@@ -42,11 +42,14 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^17.0.26",
+    "@types/react": "^18.0.6",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "prisma": "^3.12.0",
-    "tailwindcss": "^3.0.15"
+    "prisma": "^4.2.1",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.3"
   }
 }
