--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "babel-plugin-superjson-next": "^0.4.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "date-fns": "^2.29.2",
     "file-loader": "^6.2.0",
@@ -42,6 +43,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^17.0.26",
     "@types/react": "^18.0.6",
     "autoprefixer": "^10.4.2",
