--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.2",
     "file-loader": "^6.2.0",
     "formidable": "^2.0.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "ldapjs": "^2.3.3",
     "multer": "^1.4.5-lts.1",
