--- a/package.json
+++ b/package.json
@@ -44,15 +44,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^17.0.26",
-    "@types/react": "^18.0.6",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "prisma": "^4.2.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.6.3"
+    "tailwindcss": "^3.1.8"
   }
 }
